Adding to GitHub- updated README and gitignore